--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #f8fafd;
+    background-color: #acb7c7;
     font-family: "Inter", sans- serif;
     color: #252525;
     padding: 2rem;
@@ -15,9 +15,9 @@ body {
     padding-bottom: 3rem;
   }
   .hero .title {
-    font-size: 2rem;
-    font-weight: bold;
-    padding-bottom: 1.5rem;
+    font-size: 2.7rem;
+    font-weight: 700;
+    padding-bottom: 2rem;
   }
   .hero .subtitle {
     font-size: 1.125rem;
