--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,7 @@ body {
   .password .text input.font-xxsmall{
     font-size: 1rem;
   }
-  
+
   .password .actions button {
     background-color: transparent;
     border: none;
@@ -224,3 +224,29 @@ body {
     background-color: #9b51e0;
   }
   
+  @media only screen and (max-width: 480px){
+    .password{
+      padding: 1rem;
+    }
+
+    password .text input {
+      font-size: 1.5rem;
+    
+    }
+  
+    .password .text input.font-small{
+      font-size: 1.2rem;
+    }
+  
+    .password .text input.font-xsmall{
+      font-size: 1rem;
+    }
+  
+    .password .text input.font-xxsmall{
+      font-size: 1rem;
+    }
+
+    .password .actions img{
+      width: 24px;
+    }
+  }
